--- a/travel.html
+++ b/travel.html
@@ -1697,7 +1697,7 @@
 
                                                 <div class="et_pb_text_inner">
 
-                                                    <p>
+                                                    <!-- <p>
                                                         For participants from those countries which require a visa to
                                                         enter the USA for the IEEE ICDM 2025
                                                         conference, <a
@@ -1709,15 +1709,15 @@
                                                             Yes,
                                                             then the visa invitation letter will be emailed
                                                             to you once you complete the registration.</span>
-                                                    </p>
+                                                    </p> -->
                                                     <h4><strong>Visa Information Contact </strong></h4>
                                                     <p>TBD
                                                     </p>
 
-                                                    <p>Yifeng Gao <a
+                                                    <!-- <p>Yifeng Gao <a
                                                             href="mailto:yifeng.gao@utrgv.edu">yifeng.gao@utrgv.edu</a>
                                                     </p>
-                                                    <p>Yanhua Li <a href="mailto:yli15@wpi.edu">yli15@wpi.edu</a></p>
+                                                    <p>Yanhua Li <a href="mailto:yli15@wpi.edu">yli15@wpi.edu</a></p> -->
 
                                                 </div>
                                             </div>
@@ -1886,7 +1886,7 @@ that connect to Amtrak and other routes to DC.
                                                             href="https://godcgo.com/scooter/" target="_blank">Scooters and Bikes</a>: Dockless scooters, bikes, and bicycle-sharing programs are available for 
                                                             convenient short-distance travel. </li>
                                                         <li><a
-                                                            href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/Water%20Taxi%20and%20Ferry%20Services" target="_blank">Water Taxi and Ferry Services</a>: For those staying near the waterfront, water taxis provide a scenic 
+                                                            href="https://www.cityexperiences.com/washington-dc/city-cruises/sightseeing-tours/georgetown-alexandria-sightseeing-cruise/" target="_blank">Water Taxi and Ferry Services</a>: For those staying near the waterfront, water taxis provide a scenic 
                                                             travel option along the Potomac River. </li>
                                                         <li>Taxi and Rideshare Services: Popular rideshare services such as Uber and Lyft operate 
                                                             throughout the city, offering another convenient travel method. Taxis are also readily available at 
