--- a/keydates.html
+++ b/keydates.html
@@ -1596,19 +1596,16 @@
 -->
 							</li>
 							<li
-								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-529">
-								<a href="index.html">Attending</a>
-								<!--
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1893"><a href="diversity/index.html">Diversity Statement</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1152"><a href="registration/index.html">Registration</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1489"><a href="instructions-authors/index.html">Instructions for Authors</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1348"><a href="job-matching/index.html">Job Matching Program</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1541"><a href="studentawards/index.html">Student Attendance Awards</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2023"><a href="job-matching-posts/index.html">Job Opportunities</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2111"><a href="sessionchairspresentersinfo/index.html">Session Chair and Presenter Information</a></li>
-</ul>
--->
+								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-705">
+								<a href="index.html" aria-current="page">Attending</a>
+								<ul class="sub-menu">
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="travel.html"
+											>
+											Travel to Washingtong, DC
+										</a>
+									</li>
+								</ul>
 
 							</li>
 							<!--
