--- a/travel.html
+++ b/travel.html
@@ -1499,11 +1499,11 @@
 
 
                             <li
-                                class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-704 current_page_item menu-item-has-children menu-item-705">
-                                <a href="index.html" aria-current="page">Calls</a>
+                                class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-704 menu-item-has-children menu-item-705">
+                                <a href="index.html">Calls</a>
                                 <ul class="sub-menu" style="min-width: 400px;">
                                     <li
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cfp.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Call for Papers
@@ -1597,21 +1597,18 @@
 -->
                             </li>
                             <li
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-529">
-                                <a href="index.html">Attending</a>
-                                <!--
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1893"><a href="diversity/index.html">Diversity Statement</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1152"><a href="registration/index.html">Registration</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1489"><a href="instructions-authors/index.html">Instructions for Authors</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1348"><a href="job-matching/index.html">Job Matching Program</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1541"><a href="studentawards/index.html">Student Attendance Awards</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2023"><a href="job-matching-posts/index.html">Job Opportunities</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2111"><a href="sessionchairspresentersinfo/index.html">Session Chair and Presenter Information</a></li>
-</ul>
--->
+                            class="menu-item menu-item-type-post_type current-menu-item menu-item-object-page menu-item-has-children menu-item-705">
+                            <a href="index.html" aria-current="page">Attending</a>
+                            <ul class="sub-menu">
+                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                    <a href="travel.html"
+                                        >
+                                        Travel to Washingtong, DC
+                                    </a>
+                                </li>
+                            </ul>
 
-                            </li>
+                        </li>
                             <!--
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-269"><a href="contact-us/index.html">Contact Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1715"><a href="contact-us/index.html"><p style="color: black">COntact</p></a></li>
@@ -1711,13 +1708,12 @@
                                                             to you once you complete the registration.</span>
                                                     </p> -->
                                                     <h4><strong>Visa Information Contact </strong></h4>
-                                                    <p>TBD
-                                                    </p>
+                                                    <br>
 
-                                                    <!-- <p>Yifeng Gao <a
+                                                    <p>Yifeng Gao <a
                                                             href="mailto:yifeng.gao@utrgv.edu">yifeng.gao@utrgv.edu</a>
                                                     </p>
-                                                    <p>Yanhua Li <a href="mailto:yli15@wpi.edu">yli15@wpi.edu</a></p> -->
+                                                    <p>Yanhua Li <a href="mailto:yli15@wpi.edu">yli15@wpi.edu</a></p>
 
                                                 </div>
                                             </div>
