--- a/travel.html
+++ b/travel.html
@@ -1600,7 +1600,7 @@
                             class="menu-item menu-item-type-post_type current-menu-item menu-item-object-page menu-item-has-children menu-item-705">
                             <a href="index.html" aria-current="page">Attending</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                     <a href="travel.html"
                                         >
                                         Travel to Washingtong, DC
