--- a/travel.html
+++ b/travel.html
@@ -12,7 +12,7 @@
         document.documentElement.className = 'js';
     </script>
 
-    <title>Call for Papers | IEEE International Conference on Data Mining 2025 (ICDM2025) | IEEE ICDM 2025</title>
+    <title>Travel | IEEE International Conference on Data Mining 2025 (ICDM2025) | IEEE ICDM 2025</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <meta name='robots' content='max-image-preview:large' />
     <script type="text/javascript">
