--- a/cfw.html
+++ b/cfw.html
@@ -1598,6 +1598,14 @@
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-705">
 								<a href="index.html" aria-current="page">Attending</a>
 								<ul class="sub-menu">
+
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="registration.html"
+                                            >
+                                            Registration
+                                        </a>
+                                    </li>
+
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="travel.html"
 											>
