--- a/registration.html
+++ b/registration.html
@@ -1605,7 +1605,7 @@
                             <ul class="sub-menu">
                                 
                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                    <a href="travel.html"
+                                    <a href="registration.html"
                                         >
                                         Registration
                                     </a>
