--- a/cficp.html
+++ b/cficp.html
@@ -1533,6 +1533,14 @@
                                         </a>
                                     </li>
 
+                                    <li
+										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="cfs.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
+											Call for Sponsorship
+										</a>
+									</li>
+
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                         <a href="cficp.html"
                                             style="display: block; min-width: 350px; padding: 10px 20px;">
