--- a/travel.html
+++ b/travel.html
@@ -1531,6 +1531,14 @@
                                         </a>
                                     </li>
 
+                                    <li
+										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="cfs.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
+											Call for Sponsorship
+										</a>
+									</li>
+
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cficp.html"
                                             style="display: block; min-width: 350px; padding: 10px 20px;">
@@ -1746,7 +1754,7 @@
                                             <div class="header-content-container center">
                                                 <div class="header-content">
 
-                                                    <h1 class="et_pb_module_header">Travel Guide to Washington, DC, USA
+                                                    <h1 class="et_pb_module_header">Travel Guide to Washingtong, DC, USA
                                                     </h1>
 
                                                     <div class="et_pb_header_content_wrapper"></div>
