--- a/cfp.html
+++ b/cfp.html
@@ -1516,45 +1516,55 @@
 										</a>
 									</li>
 
-									<li
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="cft.html"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Call for Tutorials
-                                        </a>
-                                    </li>
-
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="https://icdm25demo.github.io/ "
-                                            style="display: block; min-width: 350px; padding: 10px 20px;"
-                                            target="_blank">
-                                            Call for Demo
-                                        </a>
-                                    </li>
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="cft.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
+											Call for Tutorials
+										</a>
+									</li>
 
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="cficp.html"
-                                            style="display: block; min-width: 350px; padding: 10px 20px;">
-                                            Call for ICDM Contest Proposals
-                                        </a>
-                                    </li>
+										<a href="https://icdm25demo.github.io/ "
+											style="display: block; min-width: 350px; padding: 10px 20px;"
+											target="_blank">
+											Call for Demo
+										</a>
+									</li>
+
+									<li
+										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="cfs.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
+											Call for Sponsorship
+										</a>
+									</li>
+
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="cficp.html"
+											style="display: block; min-width: 350px; padding: 10px 20px;">
+											Call for ICDM Contest Proposals
+										</a>
+									</li>
 
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/"
-										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
+											style="display: block; min-width: 350px; padding: 10px 20px;"
+											target="_blank">
 											REU Symposium 2025
 										</a>
 									</li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://2025-icdm-ughs.github.io/"
-										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
-										   Undergraduate and High School Symposium
+											style="display: block; min-width: 350px; padding: 10px 20px;"
+											target="_blank">
+											Undergraduate and High School Symposium
 										</a>
 									</li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://icdm25phd.github.io/"
-										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
-										   PhD Forum
+											style="display: block; min-width: 350px; padding: 10px 20px;"
+											target="_blank">
+											PhD Forum
 										</a>
 									</li>
 
@@ -1600,15 +1610,13 @@
 								<ul class="sub-menu">
 
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="registration.html"
-                                            >
-                                            Registration
-                                        </a>
-                                    </li>
+										<a href="registration.html">
+											Registration
+										</a>
+									</li>
 
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-										<a href="travel.html"
-											>
+										<a href="travel.html">
 											Travel to Washingtong, DC
 										</a>
 									</li>
@@ -1971,7 +1979,10 @@
 														one author of each accepted paper must complete the conference
 														registration and present the
 														paper at the conference for it to be included in the proceedings
-														and program.</p>
+														and program.<span style="color: red;"> In cases where an author is unable to attend the
+														conference in person due to visa issues, a pre-recorded video
+														presentation is allowed. The presenting author must still
+														register for the conference.</span></p>
 
 													<h4><strong>Further Information</strong></h4>
 													<p>For queries regarding ICDM 2025, please contact <a
