--- a/cft.html
+++ b/cft.html
@@ -1619,7 +1619,7 @@
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="travel.html"
 											>
-											Travel to Washingtong, DC
+											Travel to Washington, DC
 										</a>
 									</li>
 								</ul>
