--- a/travel.html
+++ b/travel.html
@@ -1619,7 +1619,7 @@
                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                     <a href="travel.html"
                                         >
-                                        Travel to Washingtong, DC
+                                        Travel to Washington, DC
                                     </a>
                                 </li>
                             </ul>
@@ -1754,7 +1754,7 @@
                                             <div class="header-content-container center">
                                                 <div class="header-content">
 
-                                                    <h1 class="et_pb_module_header">Travel Guide to Washingtong, DC, USA
+                                                    <h1 class="et_pb_module_header">Travel Guide to Washington, DC, USA
                                                     </h1>
 
                                                     <div class="et_pb_header_content_wrapper"></div>
