--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -2094,6 +2094,54 @@
                                         </div>
                                     </div>
 
+
+                                    <!-- Poster Chair -->
+                                    <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
+                                        <div class="et_pb_row et_pb_row_2">
+                                            <div
+                                                class="et_pb_column et_pb_column_4_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough et-last-child">
+
+                                                <div
+                                                    class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
+
+                                                    <div class="et_pb_text_inner">
+                                                        <h2 style="text-align: center;">Poster Chair</h2>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="et_pb_row et_pb_row_1"
+                                            style="display: flex; justify-content: center; align-items: center;">
+                                            <div class="et_pb_column et_pb_column_1_3">
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
+                                                    <a href="https://zhanglei.phd/" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Lei Zhang.png"
+                                                                alt="Dimitrios Gunopulos" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://zhanglei.phd/"
+                                                                target="_blank">Lei Zhang</h4>
+                                                        <div>
+                                                            <p>Northern Illinois University</p></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                        </div>
+                                    </div>
+
+
                                     <!-- Workflow Chair -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_2">
@@ -2946,28 +2994,29 @@
                                         </div>
                                     </div>
 
+
                                     <!-- Sponsorship Chairs -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_4">
                                             <div
                                                 class="et_pb_column et_pb_column_4_4 et_pb_column_5 et_pb_css_mix_blend_mode_passthrough et-last-child">
-
                                                 <div
                                                     class="et_pb_module et_pb_text et_pb_text_2 et_pb_text_align_left et_pb_bg_layout_light">
                                                     <div class="et_pb_text_inner">
                                                         <h2 style="text-align: center;">Sponsorship Chairs</h2>
                                                     </div>
                                                 </div>
-
                                             </div>
                                         </div>
 
                                         <div class="et_pb_row et_pb_row_1"
                                             style="display: flex; justify-content: center; align-items: start;">
-                                            <div class="et_pb_column et_pb_column_1_3">
+                                            <div
+                                                class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                                 <div
-                                                    class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
-                                                    <a href="https://csis.pace.edu/~mqiu/" target="_blank">
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix  et_pb_text_align_center et_pb_bg_layout_light">
+                                                    <a href="https://csis.pace.edu/~mqiu/"
+                                                        target="_blank">
                                                         <div
                                                             class="et_pb_team_member_image et-waypoint et_pb_animation_off">
                                                             <img width="500" height="500"
@@ -2980,36 +3029,83 @@
                                                         <h4 class="et_pb_module_header"><a
                                                                 href="https://csis.pace.edu/~mqiu/"
                                                                 target="_blank">Meikang Qiu</h4>
+
                                                         <div>
                                                             <p>Augusta U.</p>
                                                         </div></a>
+
                                                     </div>
                                                 </div>
                                             </div>
 
-                                            <div class="et_pb_column et_pb_column_1_3">
+
+                                            <div
+                                                class="et_pb_column et_pb_column_1_3 et_pb_column_2  et_pb_css_mix_blend_mode_passthrough">
+
                                                 <div
-                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix  et_pb_text_align_center et_pb_bg_layout_light">
+
                                                     <a href="https://tongwang-umb.github.io/" target="_blank">
                                                         <div
                                                             class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width="500" height="500" src="images/oc/Tong Wang.jpg"
-                                                                alt="Chang-Tien Lu" class="wp-image-633" />
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Tong Wang.jpg" alt="Chang-Tien Lu"
+                                                                class="wp-image-633" />
                                                         </div>
                                                     </a>
 
                                                     <div class="et_pb_team_member_description">
                                                         <h4 class="et_pb_module_header"><a
-                                                                href="https://tongwang-umb.github.io/"
-                                                                target="_blank">Tong Wang</h4>
+                                                                href="https://tongwang-umb.github.io/" target="_blank">Tong Wang</h4>
+
                                                         <div>
                                                             <p>Amazon</p>
                                                         </div></a>
+
                                                     </div>
                                                 </div>
                                             </div>
+
+
+                                            <div
+                                                class="et_pb_column et_pb_column_1_3 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
+
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix  et_pb_text_align_center et_pb_bg_layout_light">
+
+                                                    <a href="https://web.njit.edu/~gwang/" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Guiling (Grace) Wang.png" alt="Chang-Tien Lu"
+                                                                class="wp-image-633" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://web.njit.edu/~gwang/"
+                                                                target="_blank">Guiling (Grace) Wang</h4>
+
+                                                        <div>
+                                                            <p>New Jersey Institute of Technology</p>
+                                                        </div></a>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+
                                         </div>
                                     </div>
+
+
+
+
+
+
+
 
                                     <!-- Registration Chairs -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
