--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -2094,54 +2094,6 @@
                                         </div>
                                     </div>
 
-
-                                    <!-- Poster Chair -->
-                                    <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
-                                        <div class="et_pb_row et_pb_row_2">
-                                            <div
-                                                class="et_pb_column et_pb_column_4_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough et-last-child">
-
-                                                <div
-                                                    class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-
-                                                    <div class="et_pb_text_inner">
-                                                        <h2 style="text-align: center;">Poster Chair</h2>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-
-                                        <div class="et_pb_row et_pb_row_1"
-                                            style="display: flex; justify-content: center; align-items: center;">
-                                            <div class="et_pb_column et_pb_column_1_3">
-                                                <div
-                                                    class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
-                                                    <a href="https://zhanglei.phd/" target="_blank">
-                                                        <div
-                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width="500" height="500"
-                                                                src="images/oc/Lei Zhang.png"
-                                                                alt="Dimitrios Gunopulos" />
-                                                        </div>
-                                                    </a>
-
-                                                    <div class="et_pb_team_member_description">
-                                                        <h4 class="et_pb_module_header"><a
-                                                                href="https://zhanglei.phd/"
-                                                                target="_blank">Lei Zhang</h4>
-                                                        <div>
-                                                            <p>Northern Illinois University</p></a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-
-                                        </div>
-                                    </div>
-
-
                                     <!-- Workflow Chair -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_2">
@@ -2180,6 +2132,73 @@
                                                         <div>
                                                             <p>Stony Brook University</p></a>
                                                         </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                        </div>
+                                    </div>
+
+                                    <!-- Poster Chair -->
+                                    <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
+                                        <div class="et_pb_row et_pb_row_2">
+                                            <div
+                                                class="et_pb_column et_pb_column_4_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough et-last-child">
+
+                                                <div
+                                                    class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
+
+                                                    <div class="et_pb_text_inner">
+                                                        <h2 style="text-align: center;">Poster Chair</h2>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="et_pb_row et_pb_row_1"
+                                            style="display: flex; justify-content: center; align-items: start;">
+                                            <div class="et_pb_column et_pb_column_1_3">
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
+                                                    <a href="https://zhanglei.phd/" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Lei Zhang.png"
+                                                                alt="Dimitrios Gunopulos" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://zhanglei.phd/"
+                                                                target="_blank">Lei Zhang</h4>
+                                                        <div>
+                                                            <p>Northern Illinois University</p></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div
+                                                class="et_pb_column et_pb_column_1_3 et_pb_column_2 et_pb_css_mix_blend_mode_passthrough">
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
+                                                    <a href="https://imczq.com/" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/chenzhiqian.jpg" alt="Andreas Züfle"
+                                                                class="wp-image-633" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://imczq.com/" target="_blank">Chen, ZhiQian</h4>
+                                                        <p>Mississippi State Univ.</p></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -2646,7 +2665,6 @@
                                         </div>
                                     </div>
 
-
                                     <!-- Panel Chair -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_4">
@@ -2994,7 +3012,6 @@
                                         </div>
                                     </div>
 
-
                                     <!-- Sponsorship Chairs -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_4">
@@ -3099,13 +3116,6 @@
 
                                         </div>
                                     </div>
-
-
-
-
-
-
-
 
                                     <!-- Registration Chairs -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
@@ -3585,7 +3595,6 @@
                                                 </div>
                                             </div>
 
-
                                             <div
                                                 class="et_pb_column et_pb_column_1_3 et_pb_column_2  et_pb_css_mix_blend_mode_passthrough">
 
@@ -3615,36 +3624,33 @@
                                                 </div>
                                             </div>
 
-
                                             <div
                                                 class="et_pb_column et_pb_column_1_3 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
 
                                                 <div
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix  et_pb_text_align_center et_pb_bg_layout_light">
 
-                                                    <a href="https://sites.pitt.edu/~xiaowei/" target="_blank">
+                                                    <a href="https://www.kunpengliu.com/" target="_blank">
                                                         <div
                                                             class="et_pb_team_member_image et-waypoint et_pb_animation_off">
                                                             <img width="500" height="500"
-                                                                src="images/oc/xiaowei jia.jpg" alt="Chang-Tien Lu"
+                                                                src="images/oc/Kunpeng Liu.jpg" alt="Chang-Tien Lu"
                                                                 class="wp-image-633" />
                                                         </div>
                                                     </a>
 
                                                     <div class="et_pb_team_member_description">
                                                         <h4 class="et_pb_module_header"><a
-                                                                href="https://sites.pitt.edu/~xiaowei/"
-                                                                target="_blank">Xiaowei Jia</h4>
+                                                                href="https://www.kunpengliu.com/"
+                                                                target="_blank">Kunpeng Liu</h4>
 
                                                         <div>
-                                                            <p>University of Pittsburgh</p>
+                                                            <p>Portland State Universityh</p>
                                                         </div></a>
 
                                                     </div>
                                                 </div>
                                             </div>
-
-
 
                                         </div>
                                     </div>
@@ -3710,6 +3716,36 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+                                            <div
+                                                class="et_pb_column et_pb_column_1_3 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
+
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix  et_pb_text_align_center et_pb_bg_layout_light">
+
+                                                    <a href="https://sites.pitt.edu/~xiaowei/" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/xiaowei jia.jpg" alt="Chang-Tien Lu"
+                                                                class="wp-image-633" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://sites.pitt.edu/~xiaowei/"
+                                                                target="_blank">Xiaowei Jia</h4>
+
+                                                        <div>
+                                                            <p>University of Pittsburgh</p>
+                                                        </div></a>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
                                         </div>
                                     </div>
 
