--- a/cfp.html
+++ b/cfp.html
@@ -1913,9 +1913,7 @@
 														completely as possible to allow
 														reproducibility. This includes experimental methodology,
 														empirical evaluations, and results.
-														Authors are strongly encouraged to make their code and data
-														publicly available whenever
-														possible. In addition, authors are strongly encouraged to also
+														<span style="color: red;">Authors are strongly encouraged to make their code and data available: if shared during review, it must be anonymized (e.g. with services such as Anonymous GitHub or Anonymous OSF) ensuring contributor names, emails, institutional affiliations in comments, commit messages, READMEs, and configuration files are removed</span>. In addition, authors are strongly encouraged to also
 														report, whenever possible, results
 														for their methods on publicly available datasets.
 													</p>
