--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -1620,22 +1620,19 @@
                             </li>
 
                             <li
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-874">
-                                <a href="index.html">Program</a>
-                                <!--
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1029"><a href="keynotes/index.html">Keynotes</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1879"><a href="awards/index.html">Awards</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1252"><a href="accepted-papers/index.html">Accepted Papers</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-880"><a href="acceptedworkshops/index.html">Accepted Workshops</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1296"><a href="accepted-tutorials/index.html">Accepted Tutorials</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1682"><a href="panellists/index.html">Panel Session</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1661"><a href="specialsessions/index.html">Special Sessions</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1979"><a href="programsummary/index.html">Program Overview</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1980"><a href="detailedprogram/index.html">Detailed Program</a></li>
-</ul>
--->
-                            </li>
+								class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-704 menu-item-has-children menu-item-705">
+								<a href="index.html" aria-current="page">Program</a>
+								<ul class="sub-menu" style="min-width: 400px;">
+									<li
+										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="workshops.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
+											Workshops
+										</a>
+									</li>
+								</ul>
+
+							</li>
 
                             <li
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1390">
