--- a/cfbtp.html
+++ b/cfbtp.html
@@ -1852,15 +1852,18 @@
                                                         (PC) members of the BlueSky Track. Final acceptance decisions
                                                         will be made based on review scores.</p>
 
-                                                    <h4><strong>Review Process</strong></h4>
+                                                    <h4><strong>Best Paper Awards</strong></h4>
 
+                                                    The Computing Community Consortium (CCC) has kindly sponsored awards for the best Blue Sky papers at ICDM 2025:
+
+                                                    
                                                     <li>First Prize: $1,000 (travel grant)</li>
                                                     <li>Second Prize: $750 (travel grant) </li>
                                                     <li>Third Prize: $500 (travel grant)</li>
 
-                                                    <p>The best papers will be selected among the top-ranked papers by a
-                                                        panel of PC members that discuss and rank the papers for final
-                                                        award selection.</p>
+                                                    
+
+                                                    <p>The best papers will be selected by PC members after papers are presented by the authors at the conference. </p>
                                                     <br>
 
                                                     <h4><strong>BlueSky Track Co-chairs</strong></h4>
