--- a/cfbtp.html
+++ b/cfbtp.html
@@ -1546,7 +1546,7 @@
                                     </li>
 
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="cficp.html"
+                                        <a href="cfbtp.html"
                                             style="display: block; min-width: 350px; padding: 10px 20px;">
                                             Call for BlueSky Track Papers
                                         </a>
