--- a/workshops.html
+++ b/workshops.html
@@ -1546,6 +1546,13 @@
 									</li>
 
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="cfbtp.html"
+                                            style="display: block; min-width: 350px; padding: 10px 20px;">
+                                            Call for BlueSky Track Papers
+                                        </a>
+                                    </li>
+
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/"
 											style="display: block; min-width: 350px; padding: 10px 20px;"
 											target="_blank">
