--- a/workshops.html
+++ b/workshops.html
@@ -1863,8 +1863,8 @@
 															and Explainable Decision-Making Workshop</li>
 														<li><a href="https://umrec.github.io/">UMRec</a>: User
 															Modeling and Recommendation</li>
-														<li>VISTA: VISTA: Visionary Innovation in Standards and
-															Technology of GenAI (No URL provided)</li>
+														<li><a href="https://vista-genai.github.io/">VISTA</a>: Visionary Innovation in Standards and
+															Technology of GenAI</li>
 														<li><a
 																href="https://lirio-brell.github.io/wain25/">WAIN-2025</a>:
 															IEEE ICDM 5th International Workshop on AI for Nudging
