--- a/workshops.html
+++ b/workshops.html
@@ -1759,9 +1759,9 @@
 															Tuning and Optimization for Big Data Analytics and Big
 															Models</li>
 
-														<li><a
+														<!-- <li><a
 																href="https://cmhsm.my.canva.site/mhsm-workshop">CMHSM</a>:
-															2nd Cognitive and Mental Health Disorder Detection on Social Media</li>
+															2nd Cognitive and Mental Health Disorder Detection on Social Media</li> -->
 														
 
 														<li><a
@@ -1816,8 +1816,9 @@
 														<li><a href="https://maps2025.blogs.dsv.su.se">MAPS
 																2025</a>: International Workshop on Machine learning
 															and Analytics for PSychology</li>
-														<li>MHSM 2025: Mental Health Disorder Detection on Social
-															Media (No URL provided)</li>
+														<li><a
+																href="https://cmhsm.my.canva.site/mhsm-workshop">MHSM 2025</a>: Mental Health Disorder Detection on Social
+															Media (MHSM 2025)</li>
 														<!-- <li><a href="https://ml4cyber.github.io/25/">MLC</a>: The
 															5th Machine Learning for Cybersecurity (MLC), 2025</li> -->
 														<li><a href="https://icdmw25mmai.github.io/">MMAI 2025</a>:
@@ -1851,7 +1852,8 @@
 															Astronomy Big Data</li>
 														<li><a href="https://icdm25-saimbio.github.io/">SAIMBio</a>:
 															Synergy of AI and Multimodal Biomedical Data Mining</li>
-														<li>SENTIRE: Sentiment Elicitation from Natural Text for
+														<li><a
+																href="https://sentic.net/sentire">SENTIRE</a>: Sentiment Elicitation from Natural Text for
 															Information Retrieval and Extraction (No URL provided)
 														</li>
 														<li><a
