--- a/workshops.html
+++ b/workshops.html
@@ -1854,7 +1854,7 @@
 															Synergy of AI and Multimodal Biomedical Data Mining</li>
 														<li><a
 																href="https://sentic.net/sentire">SENTIRE</a>: Sentiment Elicitation from Natural Text for
-															Information Retrieval and Extraction (No URL provided)
+															Information Retrieval and Extraction
 														</li>
 														<li><a
 																href="https://stac-lab.github.io/sstdm25/">SSTDM-2025</a>:
