--- a/workshops.html
+++ b/workshops.html
@@ -1789,6 +1789,10 @@
 														<li>DMF: 3rd International Workshop on Data Mining in Finance (DMF2025)</li>
 
 														<li><a
+																href="https://www2.kansai-u.ac.jp/dslab/workshop/2025/DMS2025/">DMS2025</a>:
+															Data Mining for Service</li>
+
+														<li><a
 																href="https://sites.google.com/view/fiirworkshop">FIIR</a>:
 															Future of Information Integrity Research (FIIR)</li>
 
@@ -1827,7 +1831,7 @@
 														<li><a href="https://icdm-mmsr.github.io/">MMSR '25</a>:
 															Workshop on Multimodal Search and Recommendations</li>
 														<li><a
-																href="https://sites.google.com/pwr.edu.pl/nmlicdm2025">NML@ICDM2025</a>:
+																href="https://sites.google.com/view/nml-icdm2025/home">NML@ICDM2025</a>:
 															Neverending Machine Learning</li>
 														<li><a
 																href="https://sites.google.com/view/icdm2025-open-world-workshop">OWAD</a>:
